myserver/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myserver
  name: myserver
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: myserver
  type: ClusterIP
